# teacher-schedule-widget

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: IMPLEMENTATION_NOTES.md  PRODUCT_ARCHITECTURE.md  WIN10_DEVELOPMENT_GUIDE.md  WINDOWING_NOTES.md  plan1.md  plan10.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  plan7.md  plan8.md  plan9.md  redis和oss.md  个人资料设计.md  远程管理建议.md  远程管理计划.md
docs/protocol/: chat-overview.md  conversation.md  device-command.md  message.md  talk-room.md  wallpaper-management.md  websocket-events.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.win10.conf.json  tauri.win11.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  config_store.rs  desktop_icons.rs  desktop_layer.rs  desktop_wallpaper.rs  input_forwarder.rs  interaction_proxy.rs  lib.rs  local_account.rs  main.rs  screenshot_tool.rs  settings_windows.rs  tray.rs  wallpaper_watcher.rs  widget_manager.rs  window_mode.rs
src-tauri/src/commands/: screenshot.rs
src-tauri/src/desktop_layer/: mod.rs  win10.rs  win11.rs
src/app/: App.tsx  AuthWindowHost.tsx  AuxWindowTitleBar.tsx  BlockSettingsWindowHost.tsx  BlockTypeConfirmWindowHost.tsx  CardSettingsWindowHost.tsx  ChatHistoryWindowHost.tsx  ChatWindowHost.tsx  ClassAccountEditWindowHost.tsx  DriveWindowHost.tsx  FloatingToolbarWindowHost.tsx  FriendProfileWindowHost.tsx  FriendRequestWindowHost.tsx  GroupAnnouncementWindowHost.tsx  ImagePreviewWindowHost.tsx  InteractionProxyHost.tsx  MediaViewerWindowHost.tsx  ProfileEditWindowHost.tsx  ProfileSearchWindowHost.tsx  ScreenshotWindowHost.tsx  SettingsWindowHost.tsx  WidgetMenuWindowHost.tsx
src/components/BlockSettingsWindow/: BlockSettingsWindow.tsx
src/components/CardSettingsWindow/: CardSettingsWindow.tsx
src/components/ChatWindow/: ChatWindow.tsx  RtcTestPanel.tsx
src/components/Profile/: ProfileViews.tsx
src/components/ScheduleToolbar/: ScheduleToolbar.tsx
src/components/ScheduleWidget/: ScheduleWidget.tsx
src/components/SettingsPanel/: SettingsPanel.tsx
src/components/SettingsWindow/: SettingsWindow.tsx
src/components/SkinPicker/: SkinPicker.tsx
src/features/account/: types.ts
src/features/chat/: chatForwarding.ts  chatLocalCache.ts  chatMessageUtils.ts  chatRepository.ts  mockChat.ts  types.ts
src/features/profile/: profileRepository.ts  types.ts
src/features/rtc/: rtcRepository.ts  rtcService.ts  types.ts
src/features/schedule/: mockSchedule.ts  types.ts
src/features/screenshot/: ScreenshotButton.tsx  screenshotApi.ts  screenshotController.ts  types.ts
src/features/settings/: settingsTypes.ts  types.ts  windowEvents.ts
src/features/skins/: themes.ts  types.ts
src/features/widgets/: defaultWidgets.ts  types.ts
src/features/windowMode/: proxyEvents.ts  types.ts
src/styles/: base.css
src/styles/themes/: midnight-coral.css
