[package]
name = "teacher-schedule-widget"
version = "0.1.0"
description = "教师课程表挂件 - Windows desktop schedule widget for teachers."
authors = ["local"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "teacher_schedule_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = 3
debug = false
incremental = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"] }
thiserror = "2"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
